--- a/demo.css
+++ b/demo.css
@@ -1,13 +1,13 @@
+/* Easy parallaxe demo stylesheet */
 .wrapper {
 	position: relative;
 	height: 2000px;
 	overflow: hidden;
 }
-
 .background {
 	width: 100%;
 	height: 700px;
-	background: url('file:///C:/Users/Public/Pictures/Sample%20Pictures/Lighthouse.jpg');
+	background: url('background.jpg');
 	background-size: cover;
 }
 .myElement {
@@ -49,7 +49,6 @@
 	top: 1000px;
 	right: -200px;
 }
-
 .myElement6 {
 	position: absolute;
 	width: 200px;
